    CHANGES in PHANGORN VERSION 3.0.0

NEW FEATURES

    o as.networx and plot.networx got a new option "outline", reducing the

      number of edges plotted

OTHER CHANGES

    o improvements to write.ancestral and write.pml.

    o update.pml can now also update site.rate.

    o NNI rearrangements in optim.pml / pml_bb are faster for larger trees.

    o bab got a progress bar, as it might runs for a long time (suggested by

      Barbara Bitarello). bab might be faster thanks to an improved lower bound.

    o densiTree now calls axisPhylo, which was improved in ape, to avoid code

      duplication

    o more error checking of input arguments and associated tests


    CHANGES in PHANGORN VERSION 2.12.0

NEW FEATURES

    o new function supgma, performing serial sampled UPGMA

      (Drummond, Rodrigo 2000)

    o new function gap_as_state, treating gaps as a state.

    o new function keep_as_tip allows to prune a tree and keep nodes as a tip

      (suggested by Hedvig Skirgard)

    o nnls now can estimate trees with calibrations and tip dated trees

    o the functions Descendants, Ancestors, Siblings, mrca.phy now also accept a

      character vector for the node argument and not only integers.

    o Ancestral state reconstruction was rewritten.

      The output of ancestral.pars and ancestral.pars could return different

      objects. anc_pml and anc_pars are now prefered over ancestral.pml and

      ancestral.pars. Output is now an object of class ancestral, which contains

      tree with node labels, the original alignment and reconstructions.

      The should be considered experimental as the internals of this function

      might change in future.

      Ancestral states of constant sites are now always this state.

    o Joint reconstruction for ML is now available.

    o Improvements to several plot functions to get nicer plots out of the box.

      Nicer defaults for plot.pml, mainly for rooted trees.
